# Oxlo---Sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  detail.md  pitch.md  pyproject.toml  railway.toml  requirements.txt  script.md  tmp_list_models.py  todo.md
api/: main.py
bot/: main.py
bot/handlers/: message_handler.py
bot/middleware/: rate_limiter.py  session_loader.py
bot/utils/: edit_queue.py
config/: settings.py
db/: client.py  models.py
db/migrations/: 001_initial_schema.sql  002_vector_memory.sql
docs/: SECURITY_AUDIT.md
graph/: concurrency.py  graph_builder.py  state.py
graph/nodes/: auditor_node.py  generator_node.py  mcp_node.py  memory_committer_node.py  pre_cognition_node.py  router_node.py  synthesizer_node.py
mcp_server/: server.py
mcp_server/tools/: python_sandbox.py
scratch/: test_mistral.py
scripts/: start.sh
tests/: test_sandbox_security.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css
web/src/components/: ArchitectureGraph.jsx  Sidebar.jsx  SwarmStatus.jsx  TechnicalTrace.jsx
web/src/pages/: ChatPage.jsx  DocsPage.jsx  LogicAuditPage.jsx  TelegramPage.jsx  TutorialPage.jsx
